--- a/.github/workflows/deploy-concursos-prod.yaml
+++ b/.github/workflows/deploy-concursos-prod.yaml
@@ -14,3 +14,7 @@ jobs:
         with:
           token: ${{ secrets.ACCESS_TOKEN }}
           event_type: deploy_concursos_prod
+          message: |
+            {
+              "vertical": "concursos"
+            }
