--- a/.github/workflows/deploy-concursos-sandbox.yaml
+++ b/.github/workflows/deploy-concursos-sandbox.yaml
@@ -14,3 +14,11 @@ jobs:
         with:
           token: ${{ secrets.ACCESS_TOKEN }}
           event_type: deploy_concursos_sandbox
+          message: |
+            {
+              "vertical": "concursos",
+              "firebase_token": "concursos-sandbox-this-is-fake-firebase-token",
+              "firebase_ios_app": "concursos-sandbox-this-is-a-fake-firebase-ios-app",
+              "firebase_android_app": "concursos-sandbox-this-is-a-fake-firebase-android-app",
+              "firebase_group": "concursos-sandbox-this-is-a-fake-firebase-group",
+            }
