--- a/.github/workflows/deploy-medicina-prod.yaml
+++ b/.github/workflows/deploy-medicina-prod.yaml
@@ -14,3 +14,7 @@ jobs:
         with:
           token: ${{ secrets.ACCESS_TOKEN }}
           event_type: deploy_medicina_prod
+          message: |
+            {
+              "vertical": "medicina"
+            }
