--- a/.github/workflows/deploy-medicina-rc.yaml
+++ b/.github/workflows/deploy-medicina-rc.yaml
@@ -20,5 +20,5 @@ jobs:
               "firebase_token": "medicina-rc-this-is-fake-firebase-token",
               "firebase_ios_app": "medicina-rc-this-is-a-fake-firebase-ios-app",
               "firebase_android_app": "medicina-rc-this-is-a-fake-firebase-android-app",
-              "firebase_group": "medicina-rc-this-is-a-fake-firebase-group",
+              "firebase_group": "medicina-rc-this-is-a-fake-firebase-group"
             }
