--- a/.github/workflows/deploy-concursos-prod.yaml
+++ b/.github/workflows/deploy-concursos-prod.yaml
@@ -1,7 +1,9 @@
 name: Concursos - Produção
 
 on:
-  workflow_dispatch
+  workflow_dispatch:
+  push:
+    tags: 'v[0-9]+.[0-9]+.[0-9]+'
 
 jobs:
   trigger:
