--- a/.github/workflows/deploy-concursos-prod.yaml
+++ b/.github/workflows/deploy-concursos-prod.yaml
@@ -11,6 +11,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+
+      - name: Check env
+        run: echo ${{ github.event.client_payload }}
+
       - name: Trigger workflow
         uses: mvasigh/dispatch-action@main
         with:
