Verifica a branch que disparou o workflow.

--- a/.github/workflows/deploy-concursos-prod.yaml
+++ b/.github/workflows/deploy-concursos-prod.yaml
@@ -13,7 +13,7 @@ jobs:
     steps:
 
       - name: Check env
-        run: echo ${{ github.event.client_payload.ref }}
+        run: echo ${GITHUB_REF}
 
       - name: Trigger workflow
         uses: mvasigh/dispatch-action@main
