Ver commit que disparou o workflow

--- a/.github/workflows/deploy-concursos-prod.yaml
+++ b/.github/workflows/deploy-concursos-prod.yaml
@@ -15,7 +15,7 @@ jobs:
     steps:
 
       - name: Check env
-        run: echo "$GITHUB_REF"
+        run: echo "$GITHUB_SHA"
 
       - name: Trigger workflow
         uses: mvasigh/dispatch-action@main
