Alteração dos workflows

--- a/.github/workflows/deploy-concursos-prod.yaml
+++ b/.github/workflows/deploy-concursos-prod.yaml
@@ -25,5 +25,6 @@ jobs:
           ref: other
           message: |
             {
+              "commit": ${{ github.sha }}
               "vertical": "concursos"
             }
