--- a/.github/workflows/deploy-medicina-prod.yaml
+++ b/.github/workflows/deploy-medicina-prod.yaml
@@ -18,5 +18,6 @@ jobs:
           event_type: deploy_medicina_prod
           message: |
             {
+              "commit": ${{ github.sha }},
               "vertical": "medicina"
             }
