--- a/.github/workflows/deploy-medicina-rc.yaml
+++ b/.github/workflows/deploy-medicina-rc.yaml
@@ -18,7 +18,7 @@ jobs:
           event_type: deploy_medicina_rc
           message: |
             {
-              "commit": ${{ github.sha }},
+              "commit": "${{ github.sha }}",
               "vertical": "medicina",
               "firebase_token": "medicina-rc-this-is-fake-firebase-token",
               "firebase_ios_app": "medicina-rc-this-is-a-fake-firebase-ios-app",
