--- a/.github/workflows/deploy-sandbox.yaml
+++ b/.github/workflows/deploy-sandbox.yaml
@@ -14,23 +14,27 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:
 
+    env:
+      VERTICAL: ${{ github.event.client_payload.message.vertical }}
+      FB_TOKEN: ${{ github.event.client_payload.message.firebase_token }}
+      FB_IOS_APP: ${{ github.event.client_payload.message.firebase_ios_app }}
+      FB_ANDROID_APP: ${{ github.event.client_payload.message.firebase_android_app }}
+      FB_GROUP: ${{ github.event.client_payload.message.firebase_group }}
+      COMMIT: ${{ github.event.client_payload.message.commit }}
+
+    steps:
       - name: Check arguments
-        env:
-          VERTICAL: ${{ github.event.client_payload.message.vertical }}
-          FB_TOKEN: ${{ github.event.client_payload.message.firebase_token }}
-          FB_IOS_APP: ${{ github.event.client_payload.message.firebase_ios_app }}
-          FB_ANDROID_APP: ${{ github.event.client_payload.message.firebase_android_app }}
-          FB_GROUP: ${{ github.event.client_payload.message.firebase_group }}
-          SHA: ${{ github.sha }}
-          COMMIT: ${{ github.event.client_payload.message.commit }}
         run: |
           echo VERTICAL: ${VERTICAL}
           echo FB_TOKEN: ${FB_TOKEN}
           echo FB_IOS_APP: ${FB_IOS_APP}
           echo FB_ANDROID_APP: ${FB_ANDROID_APP}
           echo FB_GROUP: ${FB_GROUP}
+
+      - uses: actions/checkout@v2
+        with:
+          persist-credentials: false
 
       - name: Content
         run: ls
