checkout do repositório a partir de um determinado commit.

--- a/.github/workflows/deploy-prod.yaml
+++ b/.github/workflows/deploy-prod.yaml
@@ -27,6 +27,7 @@ jobs:
 
       - uses: actions/checkout@v2
         with:
+          ref: ${{ env.COMMIT }}
           persist-credentials: false
 
       - name: Content
