--- a/.github/workflows/deploy-sandbox.yaml
+++ b/.github/workflows/deploy-sandbox.yaml
@@ -34,6 +34,7 @@ jobs:
 
       - uses: actions/checkout@v2
         with:
+          ref: ${{ env.COMMIT }}
           persist-credentials: false
 
       - name: Content
